# -*- coding: utf-8 -*-

[workspace]
members = [ "disktest", "disktest-lib" , "disktest-rawio"]
resolver = "2"

[profile.dev]
lto = "thin"
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
lto = "thin"
opt-level = 2

[profile.bench]
lto = "fat"
codegen-units = 1

[patch.crates-io]
disktest-lib = { path = "./disktest-lib" }
disktest-rawio = { path = "./disktest-rawio" }

# vim: ts=4 sw=4 expandtab
