# -*- coding: utf-8 -*-

[workspace]
members = [ "disktest", "disktest-lib" , "disktest-rawio"]
resolver = "2"

[workspace.package]
description = "Tester for Solid State Disks, Non-Volatile Memory Storage, Hard Disks, USB Sticks, SD-Cards, etc.."
homepage = "https://bues.ch/h/disktest"
repository = "https://github.com/mbuesch/disktest"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Michael Büsch <m@bues.ch>"]
categories = ["command-line-utilities", "filesystem", "hardware-support"]
keywords = ["disk", "HDD", "SSD", "flash", "SD-card"]
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = "4"
libc = "0.2"
movavg = "2"
rand = "0.9"
rand_chacha = "0.9"
regex = "1"
ring = "0.17"
signal-hook = "0.3"
tempfile = "3"
winapi = "0.3"

disktest-lib = { version = "1", path = "./disktest-lib" }
disktest-rawio = { version = "1", path = "./disktest-rawio" }

[profile.dev]
lto = "thin"
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1

[profile.test]
lto = "thin"
opt-level = 2

[profile.bench]
lto = "fat"
codegen-units = 1

# vim: ts=4 sw=4 expandtab
