[package]
name = "disktest-lib"
description = "Tester for Solid State Disks, Non-Volatile Memory Storage, Hard Disks, USB Sticks, SD-Cards, etc.."
version = "1.0.0"
homepage = "https://bues.ch/h/disktest"
repository = "https://github.com/mbuesch/disktest"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Michael Büsch <m@bues.ch>"]
categories = ["command-line-utilities", "filesystem", "hardware-support"]
keywords = ["disk", "HDD", "SSD", "flash", "SD-card"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = "4"
disktest-rawio = "1"
movavg = "2"
rand = "0.8"
rand_chacha = "0.3"
ring = "0.17"
signal-hook = "0.3"
tempfile = "3"

# vim: ts=4 sw=4 expandtab
