[package]
name = "disktest-lib"
version = "1.0.0"
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
disktest-rawio = { workspace = true }
movavg = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
ring = { workspace = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }

# vim: ts=4 sw=4 expandtab
