[package]
name = "disktest-lib"
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
disktest-rawio = { workspace = true }
libc = { workspace = true }
movavg = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
ring = { workspace = true }
signal-hook = { workspace = true }
tempfile = { workspace = true }

[lints.clippy]
undocumented_unsafe_blocks = "warn"

# vim: ts=4 sw=4 expandtab
