[package]
name = "disktest-rawio"
description = "Raw disk I/O for the disktest crate"
version = "1.0.0"
homepage = "https://bues.ch/h/disktest"
repository = "https://github.com/mbuesch/disktest"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Michael Büsch <m@bues.ch>"]
categories = ["command-line-utilities", "filesystem", "hardware-support"]
keywords = ["disk", "HDD", "SSD", "flash", "SD-card"]
edition = "2021"

[dependencies]
anyhow = "1"
libc = "0.2"

[target.'cfg(target_os="windows")'.dependencies]
regex = "1"
winapi = { version = "0.3", features = ["std", "impl-default", "minwindef", "ntdef", "winerror", "errhandlingapi", "fileapi", "handleapi", "ioapiset", "winbase", "winnt", "winioctl"] }
