[package]
name = "disktest-rawio"
version = "1.0.0"
description = "Raw disk I/O for the disktest crate"
readme = "README.md"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os="windows")'.dependencies]
regex = { workspace = true }
winapi = { workspace = true, features = ["std", "impl-default", "minwindef", "ntdef", "winerror", "errhandlingapi", "fileapi", "handleapi", "ioapiset", "winbase", "winnt", "winioctl"] }
