[package]
name = "disktest"
version = "1.16.0"
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
disktest-lib = { workspace = true }
signal-hook = { workspace = true }

# vim: ts=4 sw=4 expandtab
